--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+  --light-old-color: #f5f5dc;
+  --font-color: #000;
+  --border-color: #8b4513;
+  --cell-background-color: #f0e68c;
+}
 
 body {
+  background-color: var(--light-old-color);
+  font-family: 'Cinzel Decorative', Courier, monospace;
   text-align: center;
+  color: var(--font-color);
 }
