--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,18 @@
-<table class="board">
-  <tr *ngFor="let row of crossword; let i = index">
-    <td class="square"
-    *ngFor="let cell of row; let j = index"
-    [@cellState]="{ value: cell.state }"
-    [@winAnimation]="randomizeCellPosition()"
-    (@winAnimation.done)="isGameFinished() && this.resetCrossword()"
-    (click)="checkLetter(i, j)">
-      {{cell.letter}}
-    </td>
-  </tr>
-</table>
+<article>
+  <table class="board">
+    <tr *ngFor="let row of crossword; let i = index">
+      <td class="square" *ngFor="let cell of row; let j = index" [@cellState]="{ value: cell.state }"
+        [@winAnimation]="randomizeCellPosition()" (click)="checkLetter(i, j)">
+        {{cell.letter}}
+      </td>
+    </tr>
+  </table>
 
-<p>Number of clicked cells is {{ numberOfClickedCells() }} out of a word count of {{ sequence.length }}</p>
-<p *ngIf="numberOfClickedCells() >= sequence.length">The furthest the cells will move from the center: {{ randomFactor() | number: '1.0-0' }} pixels</p>
+  <button type="reset" (click)="resetCrossword()">Restart Crossword</button>
 
-<button type="reset" (click)="resetCrossword()">Restart Crossword</button>
+  <footer>
+    <p>Number of clicked cells is {{ numberOfClickedCells() }} out of a word count of {{ sequence.length }}</p>
+    <p *ngIf="numberOfClickedCells() >= sequence.length">The furthest the cells will move from the center: {{
+      randomFactor() | number: '1.0-0' }} pixels</p>
+  </footer>
+</article>
