--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,13 +13,14 @@
   border: 1px solid var(--dark-old-color);
   background: var(--cell-background-color);
   cursor: pointer;
-  color: var(--font-color);
-  box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
+  color: var(--dark-old-color);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
 }
 
 p {
-  font-family: Courier, monospace;
-  color: var(--font-color);
+  font-family: serif;
+  color: var(--dark-old-color);
+  letter-spacing: 0.02em;
 }
 
 button {
@@ -31,5 +32,6 @@ button {
   margin: 4px 2px;
   transition-duration: 0.4s;
   cursor: pointer;
-  font-family: Courier, monospace;
+  font-family: 'Cinzel', Courier, monospace;
+  letter-spacing: 0.1em;
 }
