remove redundant resetCrossword() method

--- a/src/app/crossword.component.html
+++ b/src/app/crossword.component.html
@@ -8,7 +8,7 @@
     </tr>
   </table>
 
-  <button type="reset" (click)="resetCrossword()">Restart Crossword</button>
+  <button type="reset" (click)="initializeCrossword()">Restart Crossword</button>
 
   <footer>
     <p>Number of clicked cells is {{ numberOfClickedCells() }} out of a word count of {{ sequence.length }}</p>
